--- a/js/test/test-policy.html
+++ b/js/test/test-policy.html
@@ -69,7 +69,7 @@
 			3OK+u3ivTSj3zwjtpudY5Xo=
 			-----END CERTIFICATE-----"></input>
 
-		Please Enter a Text to sign:<br /><input id="contentName" type="text" name="CONTENTNAME" value="/aa/bb/" /> <br />
+		Please Enter a Text to sign:<br /><input id="contentName" type="text" name="CONTENTNAME" value="/aa/bb/1.txt" /> <br />
 	
 	</form>
 	<button onclick="add()">Add Policy</button>
